[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/HUD/PlayerInterface/CardManager/AnimationQueue/AnimationQueue.gd" type="Script" id=1]



[node name="AnimationQueue" type="Node"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
